--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,71 +1,56 @@
 <!---->
 
-
 <style>
-
 </style>
-
-<!-- Toolbar -->
-<div class="toolbar" role="banner">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-  </nav>
-</div>
-
-<div class="content" role="main">
-
-  <!-- Highlight Card -->
-  <div class="">
-
-    <span>{{ title }} </span>
-
-  </div>
-  <app-students></app-students>
-
-
-
-  <!-- Footer -->
-  <footer>
-
-      <a href="http://www.kinga-digital.com" target="_blank" rel="noopener"> Kinga digital
-        <div class="github-star-badge">
-            <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
-          Star
+<div >
+  <h2 > </h2>
+  <div id="imageAct" class="imageAct"></div>
+  <img id="image" />
+  <div class="container">
+    <div class="row">
+      <div class="col-md-1 menu">
+        <div ng-include="'template/menue/left-menue.html'">
         </div>
-      </a>
-
-  </footer>
-
+      </div>
+      <div class="col-md-10 content">
+        <div class="section">
+          <div class="section-entete">
+            <div ng-include="'template/menue/title.html'">
+            </div>
+          </div>
+          <div class="section-filtre ">
+            <app-top-menue></app-top-menue>
+<!--            top menu -->
+          </div>
+          <div class="section-liste">
+            <div class="row">
+              <div class="col-md-11">
+                <app-liste-students> </app-liste-students>
+<!--                current page-->
+              </div>
+              <div class="col-md-1 filtre-droite">
+                <!--right menu-->
+              </div>
+            </div>
+          </div>
+          <div class="section-pagination">
+            <div class="conclusion">
+              Conclusion
+            </div>
+            <div class="page">
+              <div ng-include="'template/menue/pagination.html'">
+              </div>
+            </div>
+            <div class="controle">
+              <div ng-include="'template/menue/botom-controle.html'">
+              </div>
+            </div>
+          </div>
+          <div class="section-footer">
+            voici un footer
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
