--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,8 +1,32 @@
+.section-entete {
+  border-radius: 20px 20px 0px 0px;
+  background-color: rgba(0, 0, 0, .0);
+  height: 40px;
+  text-align: center;
+  color: #00b1ba;
+}
+.user {
+  float: right;
+  width: 20%;
+  height: 100%;
+  padding: 10px;
+  text-align: left;
+  cursor: pointer;
+}
 .h2 h2 {
   font-size: 25px;
-
 }
-
+.containeur{
+  margin: auto;
+  padding-left: 2%;
+  padding-top: 2%;
+  vertical-align: bottom;
+}
+.content {
+  background-color: rgba(0, 0, 0, .0);
+  min-height: 80vh;
+  margin-top: -10px;
+}
 input,
 select {
   font-size: 14px;
@@ -18,6 +42,9 @@ select {
   box-shadow: inset 0 0.5px 0.5px #00b1ba;
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
   word-wrap: break-word;
+}
+.row{
+  width: 100%;
 }
 
 
@@ -52,7 +79,13 @@ select {
   font-weight: bold;
   cursor: pointer;
 }
-
+.controle {
+  float: right;
+  margin-right: 100px;
+  margin-top: -10px;
+  background-color: rgba(0, 0, 0, .0);
+;
+}
 .menu-item-active {
   background-color: white;
   color: #00b1ba;
@@ -64,16 +97,9 @@ select {
   background-color: white;
   color: #00b1ba;
 }
-
-.content {
-  background-color: rgba(0, 0, 0, .0);
-  min-height: 100vh;
-  margin-top: -10px;
-}
-
 .section {
   width: 102%;
-  height: 100%;
+  height: 98vh;
   border-radius: 100PX;
   border-right: solid 10px #00b1ba;
   border-top: solid 1px #00b1ba
@@ -99,35 +125,6 @@ select {
 .section-entete .user img {
   width: 30px;
 }
-
-
-.section-liste {
-  margin: auto;
-  height: 80%;
-  text-align: center;
-}
-
-.section-liste .liste-personnage {
-  overflow-y: scroll;
-  height: 100%;
-  width: 96%;
-}
-
-.liste-personnage-item {
-  width: 150px;
-  display: inline-block;
-  border: 1px solid#00b1ba;
-  padding: 10px;
-  margin-bottom: 20px;
-  border-radius: .3rem;
-  float: left;
-  cursor: pointer;
-}
-
-.liste-personnage-item img {
-  width: 80px;
-}
-
 .epdt-item {
   overflow-y: scroll;
   height: 100%;
