--- a/frontend/src/app/students/listes.students/listes.students.component.css
+++ b/frontend/src/app/students/listes.students/listes.students.component.css
@@ -1,10 +1,31 @@
 
-.section-liste .liste-personnage {
+.liste-personnage {
   overflow-y: scroll;
-  height: 100%;
-  width: 96%;
+  height: 80vh;
+  width: 100%;
 }
-
+.section-liste {
+  margin: auto;
+  height: 80%;
+  text-align: center;
+}
+.filtre-droite {
+  float: left;
+  font-size: small;
+  margin-top: 10px;
+  margin-left: -12px;
+  padding: 0px;
+  border: solid 2px #00b1ba;
+  border-radius: 0px 5px 5px 5px;
+  background-color: white;
+  width: 16%;
+  max-height: 80vh;
+  overflow-y: scroll;
+  z-index: 99;
+}
+.row{
+  width: 100%;
+}
 .liste-personnage-item {
   width: 150px;
   display: inline-block;
@@ -17,4 +38,10 @@
 }
 .liste-personnage-item img {
   width: 80px;
+}
+.section-pagination {
+  margin-top: 50px;
+  border: solid 3px rgba(0, 0, 0, .0);
+  height: 7%;
+  padding: 5px;
 }
