--- a/frontend/src/app/students/listes.students/listes.students.component.html
+++ b/frontend/src/app/students/listes.students/listes.students.component.html
@@ -1,13 +1,52 @@
-<div class="main">
-  <div *ngIf="error">
-    <p> Error : {{error}}</p>
+<div class="section-entete">
+  <div ng-include="'template/menue/title.html'">
+  </div>
+</div>
+<div class="section-filtre ">
+  <app-top-menue></app-top-menue>
+</div>
+<div class="section-liste">
+  <div class="row">
+    <div class="col-md-10">
+      <div class="liste-personnage ">
+        <div class="liste-personnage-item" *ngFor="let s of students" (click)="openDialog()">
+          <p><span ng-bind="s.lastname"> </span> <span> {{s.username}}</span>
+            <img src="images/equipe/toky.png" alt="">
+          <div class="container mt-4">
+            <span>Angular 16 Bootstrap 5 Popup Modal Example</span>
+
+          </div>
+          <p >Numero : <span>{{s.id}}</span></p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-1 filtre-droite">
+      <app-right-menue></app-right-menue>
+    </div>
   </div>
 
 </div>
-  <div class="liste-personnage ">
-    <div class="liste-personnage-item"  *ngFor="let s of students" ng-click="editStudent()">
-      <p> <span ng-bind="s.lastname"> </span> <span> {{s.username}}</span>
-        <img src="images/equipe/toky.png" alt="">
-      <p>Numero : <span >{{s.id}}</span></p>
+<div class="section-pagination">
+  <div class="page">
+    <ul class="pagination">
+      <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1">Previous</a></li>
+      <li class="page-item"><a class="page-link " href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item"><a class="page-link" href="#">4</a></li>
+      <li class="page-item"><a class="page-link" href="#">5</a></li>
+      <li class="page-item "><a class="page-link active" href="#">6
+        <span class="sr-only"></span>
+      </a></li>
+      <li class="page-item"><a class="page-link" href="#">7</a></li>
+      <li class="page-item"><a class="page-link" href="#">Next</a>
+      </li>
+
+    </ul>
+  </div>
+  <div class="controle">
+    <div ng-include="'template/menue/botom-controle.html'">
     </div>
+  </div>
 </div>
+
