--- a/frontend/src/app/students/listes.students/listes.students.component.html
+++ b/frontend/src/app/students/listes.students/listes.students.component.html
@@ -18,6 +18,15 @@
           </div>
           <p >Numero : <span>{{s.id}}</span></p>
         </div>
+        <div class="liste-personnage-item"  (click)="openDialog()">
+          <p><span ng-bind="s.lastname"> </span> <span> Nuveau</span>
+            <img src="images/equipe/toky.png" alt="">
+          <div class="container mt-4">
+            <span>Angular </span>
+
+          </div>
+
+        </div>
       </div>
     </div>
     <div class="col-md-1 filtre-droite">
