--- a/frontend/src/app/menue/principale-menue/principale-menue.component.html
+++ b/frontend/src/app/menue/principale-menue/principale-menue.component.html
@@ -1,6 +1,12 @@
-<h2 span>STUDENTS MANAGER </h2>
+<h2 > <a [routerLink]="''"> STUDENTS MANAGERs </a> </h2>
 <div class="list-group list-menue ">
   <ul id="accordion" class="accordion">
+
+    <li>
+      <div class="menu" >
+        <a [routerLink]="''">Accueil</a>
+      </div>
+    </li>
     <li *ngFor="let menu of menus; let i = index" [class.active]="menu.active">
       <div class="menu" (click)="toggle(i)">
         <i [class]="menu.iconClass"></i>
