Front : Ajouter des different component , est service update

--- a/frontend/src/app/compte/login/login-modal/login-modal.component.html
+++ b/frontend/src/app/compte/login/login-modal/login-modal.component.html
@@ -1,47 +1,82 @@
 <!-- login-modal.component.html -->
 <h2 mat-dialog-title>Connexion / Inscription</h2>
 <mat-dialog-content>
-  <div *ngIf="!showRegistrationForm">
+  <div *ngIf="showLogin">
     <h3>Connexion</h3>
-    <form #loginForm="ngForm"  (ngSubmit)="handleLogin()">
+    <form #loginForm="ngForm"  (ngSubmit)="submitLogin()">
       <mat-form-field class ="d-block">
         <input matInput placeholder="Email/ Tél /Username " name="username" #name [(ngModel)]="userConnection.username" required>
-
       </mat-form-field>
       <mat-form-field class ="d-block">
         <input matInput type="password" placeholder="Mot de passe" name="password" #name [(ngModel)]="userConnection.password" required>
       </mat-form-field>
-      <div *ngIf="errorMessage" class="alert alert-danger mt-3">
-        {{ errorMessage }}
+      <div *ngIf="errorLogin" class="alert alert-danger mt-3">
+        {{ errorLogin }}
       </div>
-      <button mat-button (click)="showRegistrationForm = true">Pas encore inscrit ?</button>
+      <span mat-button (click)="showForm('showFormContact')">Pas encore inscrit ?</span>
       <button mat-raised-button type="submit" color="primary">Se connecter</button>
     </form>
   </div>
-  <div *ngIf="showRegistrationForm">
-    <h3>Inscription</h3>
-    <form #registrationForm="ngForm" (ngSubmit)="submitRegistrationForm(registrationForm)">
+
+  <div *ngIf="showFormContact">
+    <h3>Votre contact </h3>
+    <form  (ngSubmit)="submitFormContact()">
       <mat-form-field class ="d-block">
-        <input matInput placeholder="Adresse e-mail" name="email" ngModel required>
+        <input matInput placeholder="Nomero du telephone" name="cin" ngModel required>
+      </mat-form-field>
+      <div *ngIf="errorFormContact" class="alert alert-danger mt-3">
+        {{ errorFormContact }}
+      </div>
+      <button class="btn btn-success" type="submit" (click)="showForm('showValidationSms')">Suivante  </button>
+    </form>
+  </div>
+  <div *ngIf="showValidationSms">
+    <h3> Validation de numero  </h3>
+    <form #registrationForm="ngForm" (ngSubmit)="submitValidationSms()">
+      <mat-form-field class ="d-block">
+        <input matInput placeholder="Code" name="Code validation" ngModel required>
+      </mat-form-field>
+      <div *ngIf="errorValidationSms" class="alert alert-danger mt-3">
+        {{ errorValidationSms }}
+      </div>
+      <button class="btn btn-success" type="submit" >Suivante  </button>
+
+    </form>
+  </div>
+  <div *ngIf="showFormPassword">
+    <h3> Choisir le mots de passe   </h3>
+    <form  (ngSubmit)="submitPassword()">
+      <mat-form-field class ="d-block">
+        <input matInput placeholder="Mots de passe " name="Code validation" ngModel required>
       </mat-form-field>
       <mat-form-field class ="d-block">
-        <input matInput placeholder="Nom d'utilisateur" name="username" ngModel required>
+        <input matInput placeholder="Confirmer  " name="Code validation" ngModel required>
+      </mat-form-field>
+      <div *ngIf="errorFormPassword" class="alert alert-danger mt-3">
+        {{ errorFormPassword }}
+      </div>
+      <button class="btn btn-success" type="submit" >Suivante  </button>
+    </form>
+  </div>
+  <div *ngIf="showFormRegistration">
+    <h3>  Votre information   </h3>
+    <form #registrationForm="ngForm" (ngSubmit)="submitRegistration()">
+      <mat-form-field class ="d-block">
+        <input matInput placeholder="Nom " name="cin" ngModel required>
       </mat-form-field>
       <mat-form-field class ="d-block">
-        <input matInput placeholder="Nom de famille" name="lastname" ngModel required>
+        <input matInput placeholder="Prenom " name="cin" ngModel required>
       </mat-form-field>
       <mat-form-field class ="d-block">
-        <input matInput placeholder="Prénom" name="firstname" ngModel required>
+        <input matInput placeholder="Addresse " name="cin" ngModel required>
       </mat-form-field>
       <mat-form-field class ="d-block">
-        <input matInput placeholder="Adresse" name="address" ngModel required>
+        <input matInput placeholder="Cin " name="cin" ngModel required>
       </mat-form-field>
-      <mat-form-field class ="d-block">
-        <input matInput placeholder="Numéro de CIN" name="cin" ngModel required>
-      </mat-form-field>
-      <span class="btn" (click)="showRegistrationForm = false"> >Déjà inscrit ? Se connecter?? </span>
-      <button class="btn btn-success"  (click)="showRegistrationForm = false">Déjà inscrit ? Se connecter</button>
-      <button class="btn"  type="submit" color="primary">S'inscrire</button>
+      <div *ngIf="errorFormRegistration" class="alert alert-danger mt-3">
+        {{ errorFormRegistration}}
+      </div>
+      <button class="btn btn-success" type="submit" > Terminer </button>
     </form>
   </div>
 </mat-dialog-content>
