Edition end update

--- a/frontend/src/app/students/etid-student-modal/etid-student-modal.component.html
+++ b/frontend/src/app/students/etid-student-modal/etid-student-modal.component.html
@@ -73,7 +73,7 @@
                   <input type="text"/>
                 </div>
                 <div>
-                  <span> Description  : </span>
+                  <span>sur la description du chaque chelectionné ( prix / durré ) </span>
                   50 000 Ariary
                 </div>
               </div>
