--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -10,6 +10,8 @@
             <img src="images/equipe/toky.png" alt="">
              <span> {{user.firstname}}</span>
              <span> {{user.lastname}}</span>
+             <span (click)="logout()"> Logout</span>
+
            </span>
 
 
