--- a/frontend/src/app/students/listes.students/listes.students.component.html
+++ b/frontend/src/app/students/listes.students/listes.students.component.html
@@ -53,7 +53,8 @@
     </ul>
   </div>
   <div class="controle">
-    <div ng-include="'template/menue/botom-controle.html'">
+    <div >
+       Nouveau
     </div>
   </div>
 </div>
