--- a/frontend/src/app/admin/company/company.component.html
+++ b/frontend/src/app/admin/company/company.component.html
@@ -1,1 +1,71 @@
 <p>company works!</p>
+<div class ="contenu">
+  <div class="container mt-5">
+    <h1>Édition d'Entreprise</h1>
+    <div class="row">
+      <div class="col-md-4 company-form">
+        <h2>Formulaire d'Édition</h2>
+        <form>
+          <div class="form-group">
+            <label for="companyName">Nom de la société</label>
+            <input type="text" class="form-control" id="companyName" [(ngModel)]="company.name" [ngModelOptions]="{standalone: true}">
+          </div>
+          <div class="form-group">
+            <label for="companySlogan">Slogan</label>
+            <input type="text" class="form-control" id="companySlogan" [(ngModel)]="company.slogan" [ngModelOptions]="{standalone: true}">
+          </div>
+          <div class="form-group">
+            <label for="companyDescription">Description</label>
+            <textarea class="form-control" id="companyDescription" [(ngModel)]="company.description" [ngModelOptions]="{standalone: true}"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary" (click)="saveCompany()" >Enregistrer les Modifications</button>
+
+        </form>
+      </div>
+      <div class="col-md-4 company-logo company-form">
+        <h2>Upload du Logo</h2>
+        <div class="form-group">
+          <input type="file" class="form-control-file" id="companyLogo">
+        </div>
+        <img src="placeholder-logo.jpg" alt="Logo de l'entreprise" id="previewImage">
+        <h2>Carte </h2>
+        <div class="form-group">
+          <input type="file" class="form-control-file" id="companyCard">
+        </div>
+        <img src="placeholder-logo.jpg" alt="Logo de l'entreprise" id="previewCard">
+
+      </div>
+
+      <div class="col-md-4 company-details">
+        <h2>Informations sur l'Entreprise</h2>
+        <p><strong>Nom de l'Entreprise:</strong> Nom de l'entreprise XYZ</p>
+        <p><strong>Adresse:</strong> 123, Rue de l'Entreprise, Ville</p>
+        <p><strong>Numéro de Téléphone:</strong> +1 123-456-7890</p>
+        <form>
+          <div class="form-group">
+            <label for="responsable">Ajouter une formation </label>
+            <input type="text" class="form-control" id="responsable" placeholder="Ajouter une responsable ">
+          </div>
+
+          <button type="submit" class="btn btn-primary">Enregistrer les Modifications</button>
+        </form>
+        <form>
+          <div class="form-group">
+            <label for="companyName">Ajouter une formation </label>
+            <input type="text" class="form-control" id="formation" placeholder="Entrez le nom de formation">
+          </div>
+
+          <!-- Ajoutez d'autres champs de formulaire ici -->
+          <button type="submit" class="btn btn-primary">Enregistrer les Modifications</button>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+      Liste
+  </div>
+
+</div>
+<div class="controle">
+  <app-bottom-controle></app-bottom-controle>
+</div>
