Gerer la partie Inscription

--- a/frontend/src/app/students/etid-student-modal/etid-student-modal.component.html
+++ b/frontend/src/app/students/etid-student-modal/etid-student-modal.component.html
@@ -25,13 +25,13 @@
             <input matInput type="text" placeholder=" contact" class="d100" [(ngModel)]="newStudent.contact">
           </mat-form-field>
           <mat-form-field class="d-block">
-            <input matInput type="text" placeholder="E-Mail " class="d100">
+            <input matInput type="text" placeholder="E-Mail " class="d100" [(ngModel)]="newStudent.email">
           </mat-form-field>
           <mat-form-field class="d-block">
-            <input matInput type="text" placeholder=" Série" class="d100">
+            <input matInput type="text" placeholder=" Série" class="d100" [(ngModel)]="newStudent.adress">
           </mat-form-field>
           <mat-form-field class="d-block">
-            <input matInput type="text" placeholder="Année du back" class="d100">
+            <input matInput type="text" placeholder="Année du back" class="d100" [(ngModel)]="newStudent.codeParenage">
           </mat-form-field>
         </div>
       </mat-card>
