--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -15,7 +15,7 @@
            </span>
 
 
-          <h1>Titre</h1>
+          <h1>{{companyService.company.name}}</h1>
         </div>
         <div class ="content">
           <router-outlet></router-outlet>
